Login/Logout via OAuth working

--- a/templates/navbarloggedin.tmpl
+++ b/templates/navbarloggedin.tmpl
@@ -13,7 +13,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">home</a></li>
             <li><a href="#about">read</a></li>
-            <li><a href="#contact">logout</a></li>
+            <li><a href="./index.php?action=logout&token={{token}}">logout {{username}}</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
