Start of search and edit

--- a/templates/navbarloggedin.tmpl
+++ b/templates/navbarloggedin.tmpl
@@ -13,7 +13,11 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">home</a></li>
             <li><a href="#about">read</a></li>
-            <li><a href="./index.php?action=logout&token={{token}}">logout {{username}}</a></li>
+            <li><a href="./index.php?action=logout&token={{token}}">logout <b>{{username}}<b></a></li>
+<!--
+            <li>{{ip}}</li>
+            <li>{{ua}}</li>
+-->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
