--- a/templates/editform.tmpl
+++ b/templates/editform.tmpl
@@ -1,6 +1,14 @@
 <form action="index.php?action=edit&stage=save" method=post>
-<b>Current wikitext of: {{title}}</b>
+<h1 class="page-header">Editing '{{title}}'</h1>
 <textarea cols=80 rows=25 name="wikitext">{{wikitext}}</textarea>
+<label for="editform_summary">Summary:</label>
+<input id="editform_summary" type="text" name="summary" value="{{summary}}"  size="60" maxlength="255" />
+<div id="checkboxes" style="display: blck">
+<input name="minoredit" type="checkbox" value="1" id="editform_minoredit">
+<label for="editform_minoredit">Minor edit</label>
+<input name="watchlist" type="checkbox" value="1" id="editform_watchlist">
+<label for="editform_watchlist">Watch page</label>
+</div>
 <input type="hidden" name="token" value="{{token}}" />
 <input type="hidden" name="title" value="{{title}}" />
 <div class="" style="display: block">
