--- a/templates/navbarloggedin.tmpl
+++ b/templates/navbarloggedin.tmpl
@@ -7,12 +7,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tor Proxy</a>
+          <a class="navbar-brand" href="/">Tor Proxy</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">home</a></li>
-            <li><a href="#about">read</a></li>
+            <li class="active"><a href="./index.php?action=home">home</a></li>
+            <li><a href="#">read</a></li>
             <li><a href="./index.php?action=logout&token={{token}}">logout <b>{{username}}<b></a></li>
 <!--
             <li>{{ip}}</li>
