--- a/templates/msgsuccess.tmpl
+++ b/templates/msgsuccess.tmpl
@@ -1,3 +1,3 @@
 <div class="alert alert-success" role="alert">
-    <strong>Success.</strong> Saved '{{title}}'.
+    <strong>Success.</strong> Saved '<a href="{{{titleurl}}}">{{title}}</a>'.
 </div>
