--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text">({{ip}}) - {{ua}}</p>
+    <p class="navbar-text">({{ip}}{{#if xff}} / {{xff}}{{/if}}) - {{ua}}</p>
   </div>
 </nav>
